@@ -635,6 +635,11 @@ void DrcDialog::OnStartdrcClick( wxCommandEvent& event )
 
     wxBeginBusyCursor();
 
+    // running the module editor and selecting "Update module in current board"
+    // causes the list to become obsolete because of the new pads from the
+    // revised module.
+    m_Parent->build_liste_pads();
+
     // run all the tests, with no UI at this time.
     m_tester->RunTests();
 
